# KFlow

./: README.md  pyproject.toml
examples/: cnn_mnist.py  dense_boston.py  dense_breast.py  dense_diabetes.py  dense_iris.py  dense_wine.py  rnn_random.py
src/kflow/: __init__.py  initializations.py  optimizers.py
src/kflow/base/: __init__.py  advanced_operation.py  base_element.py  base_operation.py  constant.py  one_element_operation.py  placeholder.py  session.py  two_element_operation.py  variable.py
src/kflow/layers/: __init__.py  cnn.py  dense_layer.py  layer.py  rnn.py
src/kflow/operations/: __init__.py  activations.py  advanced_operations.py  basic_operations.py  losses.py  regularizers.py
src/kflow/optimizers/: optimizers.py
tests/: operations.py  optimizers.py
