[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kflow"
version = "1.0.0"
authors = [
  { name="Jasper Dekoninck", email="dekoninck.jasper@protonmail.com" },
]
description = "Implementation of Keras and Tensorflow like syntax using Numpy"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.26.4",
    "scikit-learn >= 1.4.1",
    "keras >= 3.0.5"
]